--- a/src/WebUI/ClientApp/src/app/components/crew-member-card/crew-member-card.component.html
+++ b/src/WebUI/ClientApp/src/app/components/crew-member-card/crew-member-card.component.html
@@ -1,4 +1,8 @@
-<mat-card class="example-card">
+<div class="d-flex justify-content-center" *ngIf="isLoading">
+  <mat-spinner></mat-spinner>
+</div>
+
+<mat-card class="example-card" *ngIf="!isLoading">
     <mat-card-header class="justify-content-center">
       <mat-card-title>Shiba Inu</mat-card-title>
     </mat-card-header>
