More cleaining and initla services calls

--- a/src/WebUI/ClientApp/src/app/components/crew-member-card/crew-member-card.component.html
+++ b/src/WebUI/ClientApp/src/app/components/crew-member-card/crew-member-card.component.html
@@ -4,7 +4,7 @@
 
 <mat-card class="example-card" *ngIf="!isLoading">
     <mat-card-header class="justify-content-center">
-      <mat-card-title>Shiba Inu</mat-card-title>
+      <mat-card-title>{{crewMember.firstName}} {{crewMember.lastName}}</mat-card-title>
     </mat-card-header>
     <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
     <mat-card-content>
