--- a/src/WebUI/ClientApp/src/app/components/home/home.component.html
+++ b/src/WebUI/ClientApp/src/app/components/home/home.component.html
@@ -1,12 +1,23 @@
+<app-nav-menu></app-nav-menu>
 <div class="row">
-  <app-crew-member-card class="col-5"></app-crew-member-card>
+  <div id="leftColumn" class="col-5">
+    <app-crew-member-card 
+    *ngIf="fightType === 'CrewMember' && crewMemberFightResult?.firstPlayerCrewMember"
+    [isLoading]="isLoading"
+    [crewMember]="crewMemberFightResult.firstPlayerCrewMember"></app-crew-member-card>
+  </div>
   <div class="col-2 align-self-center">
     <div class="row mb-3 justify-content-center">
-      <button mat-raised-button color="primary">Starship Fight</button>
+      <button mat-raised-button color="primary" (click)="onStarshipFightClick()">Starship Fight</button>
     </div>
     <div class="row justify-content-center">
-      <button mat-raised-button color="accent">Crew Member Fight</button>
+      <button mat-raised-button color="accent" (click)="onCrewMemberFightClick()">Crew Member Fight</button>
     </div>
   </div>
-  <app-crew-member-card class="col-5"></app-crew-member-card>
+  <div id="rightColumn" class="col-5">
+    <app-crew-member-card class="col-5" 
+    *ngIf="fightType === 'CrewMember' && crewMemberFightResult?.secondPlayerCrewMember"
+    [isLoading]="isLoading"
+    [crewMember]="crewMemberFightResult.secondPlayerCrewMember"></app-crew-member-card>
+  </div>
 </div>
