Remove not needed test and add finishing touches to frontend

--- a/src/WebUI/ClientApp/src/app/components/crew-member-card/crew-member-card.component.html
+++ b/src/WebUI/ClientApp/src/app/components/crew-member-card/crew-member-card.component.html
@@ -6,13 +6,11 @@
     <mat-card-header class="justify-content-center">
       <mat-card-title>{{crewMember.firstName}} {{crewMember.lastName}}</mat-card-title>
     </mat-card-header>
-    <img mat-card-image src="https://material.angular.io/assets/img/examples/shiba2.jpg" alt="Photo of a Shiba Inu">
+    <img mat-card-image [src]="crewMember.imagePath" alt="Photo of Crew member">
     <mat-card-content>
-      <p>
-        The Shiba Inu is the smallest of the six original and distinct spitz breeds of dog from Japan.
-        A small, agile dog that copes very well with mountainous terrain, the Shiba Inu was originally
-        bred for hunting.
-      </p>
+      <div>Strength: {{crewMember.strength}}</div>
+      <div>Agility: {{crewMember.agility}}</div>
+      <div>Intellect: {{crewMember.intellect}}</div>
     </mat-card-content>
   </mat-card>
   
