--- a/src/WebUI/ClientApp/src/app/components/nav-menu/nav-menu.component.html
+++ b/src/WebUI/ClientApp/src/app/components/nav-menu/nav-menu.component.html
@@ -1,9 +1,9 @@
 <header>
   <nav class="navbar navbar-expand-sm navbar-toggleable-sm navbar-light bg-white border-bottom box-shadow mb-3">
     <div class="container justify-content-around">
-      <span>First player score (so far): </span>
+      <span>First player score (so far): {{firstPlayerScore}}</span>
       <a class="navbar-brand" [routerLink]="['/']">Star Card Wars</a>
-      <span>Second player score (so far): </span>
+      <span>Second player score (so far): {{secondPlayerScore}}</span>
     </div>
   </nav>
 </header>
